# infra

./: .ansible-lint  .ansible-lint.yml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlignore  .yamllint.yml  ansible.cfg  inventory.yml  playbook.yml  pyproject.toml  site.yml  speedtest.yml
group_vars/: all.yml  foxdev.yml  ndev.yml  vms.yml  zfs.yml
host_vars/: ark.yml  firefly.yml  luna.yml  monitor.yml  nova.yml  phoenix.yml  serenity.yml  vm.yml
host_vars/ark/: main.yml
host_vars/firefly/: cappuccino.yml  gentoogram.yml  main.yml  postgresql.yml  pste.yml  rehome.yml
host_vars/luna/: gentoogram.yml  main.yml  postgresql.yml
host_vars/phoenix/: main.yml
host_vars/serenity/: main.yml
host_vars/wolverine/: main.yml
inventory/: inventory.yml
inventory/group_vars/all/: main.yml  vault.yml
inventory/group_vars/debian/: main.yml  vault.yml
inventory/group_vars/lxc/: main.yml
inventory/group_vars/pveguests/: main.yml  vault.yml
inventory/group_vars/zfs/: main.yml  vault.yml
inventory/host_vars/: luna.yml
inventory/host_vars/ark/: vault.yml
inventory/host_vars/luna/: main.yml  vault,yml  vault.yml
inventory/host_vars/monitor/: main.yml  vault.yml
inventory/host_vars/nova/: main.yml  vault.yml
inventory/host_vars/phoenix/: main.yml  vault.yml
inventory/host_vars/pi-desktop/: vault.yml
inventory/host_vars/pi-netmon/: vault.yml
inventory/host_vars/pve-frigate/: vault.yml
inventory/host_vars/pve-netmon/: vault.yml
playbooks/: main.yml  speedtest.yml
roles/telegram-send/: LICENSE
vault/: pass.asc  pass.sh
(+89 files in other folders)
