[project]
name = "infra"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["ansible-core>=2.18.2"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pre-commit-hooks>=5.0.0",
    "shellcheck-py>=0.10.0.1",
    "ansible-lint>=25.1.3",
    "yamlfix>=1.17.0",
]

[tool.yamlfix]
line_length = 120
whitelines = 1
section_whitelines = 1
quote_basic_values = true
quote_representation = '"'
sequence_style = "block_style"
